web/css/win.css
/* ... */
.dialog_title {
  float:left;
  height:14px;
  font-size:12px;
  text-align:center;
  width:100%;
  color:#000;
}

.dialog_content {
  overflow:auto;
  color: #DDD;
  font-family: Tahoma, Arial, sans-serif;
  font-size: 10px;
  background-color: #eee;
}

.dialog_buttons {
  padding: 4px;
}

.top_draggable, .bottom_draggable {
  cursor:move;
}

.status_bar {
  font-size:12px;
}
.status_bar input{
  font-size:12px;
}

.dialog {
  position: absolute;
  background: #cccccc;
  border-color: #F35E0C;
  border-style: solid;
  border-width: 1px;
  filter: alpha(opacity=85);
  opacity: 0.85;
  z-index: 300;
}

/* DO NOT CHANGE THESE VALUES*/
.dialog {
  display: block;
  position: absolute;
}

.dialog table.table_window  {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
  margin: 0px;
  padding:0px;
}

.dialog table.table_window td , .dialog table.table_window th {
  padding: 0;
}

.dialog .title_window {
  -moz-user-select:none;
}

.accordionTabTitleBar {
  font-size           : 12px;
  padding             : 4px 6px 4px 6px;
  border-style        : solid none solid none;
  border-top-color    : #DDDDDD;
  border-bottom-color : #666666;
  border-width        : 1px 0px 1px 0px;
}

.resource {
  width:60%;
  padding-top:3px;
  padding-bottom:3px;
  padding-left:3px;
  border-bottom:1px solid #D5D8DE;
}

.availability {
  width:10%;
  padding-top:3px;
  padding-bottom:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
}

.alerts {
  width:10%;
  padding-top:3px;
  padding-bottom:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
}

.oob {
  width:10%;
  padding-top:3px;
  padding-bottom:3px;
  padding-right:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
}

.resourceName {
  width:49%;
  padding:3px;
  border-bottom:1px solid #D5D8DE;
}

.resourceNameAlert {
width:49%;
  padding:3px;
  border-bottom:1px solid #D5D8DE;
}

.alertType {
padding: 3px;
border-bottom: 1px solid #D5D8DE;
text-align: center;
width:20%;
}
.resourceTypeName {
  width:20%;
  padding-top:3px;
  padding-bottom:3px;
  padding-left:3px;
  border-bottom:1px solid #D5D8DE;
}

.throughput {
  width:10%;
  padding-top:3px;
  padding-bottom:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
}

.metricName {
  width:20%;
  padding-top:3px;
  padding-bottom:3px;
  padding-right:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
  white-space:nowrap;
}

.availResourceStatus {
padding-top:3px;
padding-bottom:3px;
padding-right:3px;
border-bottom:1px solid #D5D8DE;
}

#rowOrder {
  list-style-type:none;
  margin:0;
  margin-right: 5px;
  padding:0;
}

#rowOrder li {
  font:13px Verdana;
  margin:0;
  padding:4px;
   list-style-type:none;
   list-style: none; 
   width: 100%;
   border-bottom:1px solid gray;
}
   
#viewEscalationUL {
  margin:0;
  padding:0;
  width:100%;
}

#viewEscalationUL li {
  font:13px Verdana;
  margin:0px;
  padding:0px;
  list-style: none;
  width: 100%;
  border-bottom:1px solid gray;
  background-color:#F2F4F7;
}

#addEscalationUL {
  margin:0;
  margin-right: 0px;
  padding:0;
  width:100%;
}

#addEscalationUL .escTbl {
 padding-left:10px;
    }

#addEscalationUL li {
  font:13px Verdana;
  margin:0px;
  padding:0px;
  list-style: none;
  width: 100%;
  border-bottom:1px solid gray;
  background-color:#F2F4F7;
}

.escListArrow {
 display:none;
 padding: 3px; border-bottom: solid #D5D8DE; border-width: 1px;
}

.selectedHighlight {
padding: 3px;
border-bottom: solid #D5D8DE;
border-width: 1px;
text-align: right;
background-color: #dbe3f5
}
.escTbl {
  width:100%;
  margin-top:10px;
  margin-bottom:10px;
  cursor:move;
}

#viewEscalationUL .escTbl {
  width:100%;
  margin-top:0px;
  margin-bottom:10px;
  padding-left:5px;
}

.remove {
  float:right;
  display:inline;
  margin-top:5px;
  margin-right:5px;
  margin-left:5px;
  cursor:pointer;
}

.escInput {
 font:10px Verdana;
 margin:0px;
 padding:0px;
 text-align:right;
}

.lineitem {
}

.escConfirmation {
 padding:10px;
 width:200px;
 margin:auto;
 border:1px solid gray;
 background-color:#D5D8DE;
}

.td2 {
 padding:5px 0px 10px 5px;
 width:10%;
 cursor:pointer;
}

.td3 {
 width:10%;
 padding-right:5px;
 padding-top:5px;
 cursor:pointer;
}

.waitTd {
 cursor:pointer;
}

.portletLRBotBorder {
 border-left:1px solid #D5D8DE;
 border-right:1px solid #D5D8DE;
 border-bottom:1px solid #D5D8DE;
}

.portletLRBorder {
border-left:1px solid #D5D8DE;
 border-right:1px solid #D5D8DE;
}


#narrowList_false .BlockTitle{
 background-color:#38538b;
}

#narrowList_true .BlockTitle{
 background-color:#868787;
 color: #ffffff;
 font-weight: bold;
}

#narrowList_true .BlockContent{
 background-color:#eaedf2;
}

.mainNavText {
 font-family: Helvetica, sans-serif;
 font-size: 11px;
 color: #062b7a;
 font-weight: bold;
 white-space:nowrap;
}

.mainNavText a, .mainNavText td a{
 color: #062b7a;
 text-decoration:none;
}

#displaySelAction {
 border: 1px dotted #D5D8DE;
 width:35%;
 margin-left:5px;
}

#displaySelAction .BlockTitle{
 background-color:#868787;
 color: #ffffff;
 font-weight: bold;
}

.emailDiv {
 text-align:left;
}

.modifiedDate {
 padding:3px;
 background-color: #E5E5E5;
 text-align:right;
}

